[gd_scene load_steps=65 format=2]

[ext_resource path="res://enemies/behaviors/summoner_behavior.gd" type="Script" id=1]
[ext_resource path="res://enemies/hoplite_enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_20.png" type="Texture" id=3]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_36.png" type="Texture" id=4]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_48.png" type="Texture" id=5]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_56.png" type="Texture" id=6]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_57.png" type="Texture" id=7]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_58.png" type="Texture" id=8]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_55.png" type="Texture" id=9]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_59.png" type="Texture" id=10]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_19.png" type="Texture" id=11]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_23.png" type="Texture" id=12]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_25.png" type="Texture" id=13]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_35.png" type="Texture" id=14]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_44.png" type="Texture" id=15]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_45.png" type="Texture" id=16]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_46.png" type="Texture" id=17]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_54.png" type="Texture" id=18]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_32.png" type="Texture" id=19]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_18.png" type="Texture" id=20]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_28.png" type="Texture" id=21]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_30.png" type="Texture" id=22]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_37.png" type="Texture" id=23]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_31.png" type="Texture" id=24]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_15.png" type="Texture" id=25]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_17.png" type="Texture" id=26]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_22.png" type="Texture" id=27]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_21.png" type="Texture" id=28]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_33.png" type="Texture" id=29]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_40.png" type="Texture" id=30]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_41.png" type="Texture" id=31]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_42.png" type="Texture" id=32]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_43.png" type="Texture" id=33]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_16.png" type="Texture" id=34]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_26.png" type="Texture" id=35]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_47.png" type="Texture" id=36]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_51.png" type="Texture" id=37]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_52.png" type="Texture" id=38]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_53.png" type="Texture" id=39]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_27.png" type="Texture" id=40]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_38.png" type="Texture" id=41]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_24.png" type="Texture" id=42]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_49.png" type="Texture" id=43]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_50.png" type="Texture" id=44]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_14.png" type="Texture" id=45]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_13.png" type="Texture" id=46]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_29.png" type="Texture" id=47]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_39.png" type="Texture" id=48]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_34.png" type="Texture" id=49]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_00.png" type="Texture" id=50]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_05.png" type="Texture" id=51]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_11.png" type="Texture" id=52]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_02.png" type="Texture" id=53]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_03.png" type="Texture" id=54]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_04.png" type="Texture" id=55]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_06.png" type="Texture" id=56]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_07.png" type="Texture" id=57]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_08.png" type="Texture" id=58]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_10.png" type="Texture" id=59]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_01.png" type="Texture" id=60]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_09.png" type="Texture" id=61]
[ext_resource path="res://external/pfxd/disco/aseprite_frames/disco_12.png" type="Texture" id=62]
[ext_resource path="res://external/sunvox/sfx/hummm.ogg" type="AudioStream" id=63]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 50 ), ExtResource( 60 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 51 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 61 ), ExtResource( 59 ), ExtResource( 52 ), ExtResource( 62 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 12 ), ExtResource( 42 ), ExtResource( 13 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 21 ), ExtResource( 47 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 29 ), ExtResource( 49 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 41 ), ExtResource( 48 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 36 ), ExtResource( 5 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="summoner_behavior" type="Node2D"]
script = ExtResource( 1 )
enemy_scene = ExtResource( 2 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -41 )
frames = SubResource( 1 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 7.0

[node name="duration" type="Timer" parent="."]

[node name="audio_stream_player_2d" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 63 )
max_distance = 600.0

[node name="tween" type="Tween" parent="."]

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
